--- a/indexx.html
+++ b/indexx.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="photo-container">
-        <a href="https://fr.wikipedia.org/wiki/Ada_Lovelace" target="_blank">
-        <img src="images/ada.jpg" alt="Ada">
+        <a href="https://naruto.fandom.com/fr/wiki/Naruto_Uzumaki" target="_blank">
         <div class="photo-caption">
-            <h2>Ada Lovelace</h2>
-            <p>La première programmeuse</p>
+            <img src="images/ada.jpg" alt="Ada">
+            <h2>Naruto Uzumaki</h2>
+            <p> Jinchûriki de Kyûbi </p>
         </div>
     </a>
     </div>
